k8s/manifests/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: sns
  labels:
    app: payment
spec:
  selector:
    matchLabels:
      app: payment
  replicas: 1
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: sns-payment:latest
        ports:
        - containerPort: 3000
        imagePullPolicy: "Never"
        resources:
          requests:
            cpu: 500m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /api/probes/liveness
            port: 3000
        readinessProbe:
          httpGet:
            path: /api/probes/readiness
            port: 3000
        volumeMounts:
          - name: config
            mountPath: "/opt/sns/app/config/config.production.json"
            subPath: "config.production.json"
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: sns-config
            
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: sns
  labels:
    app: payment
spec:
  ports:
  - port: 3000
  selector:
    app: payment
