k8s/manifests/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: sns
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:6.0.4-alpine
        command:
          - redis-server
          - "/usr/local/etc/redis/redis.conf"
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 500m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 256Mi
        volumeMounts:
          - mountPath: /usr/local/etc/redis
            name: config
      volumes:
        - name: config
          secret:
            secretName: redis-secrets
            items:
              - key: config
                path: redis.conf
            
              
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: sns
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
