k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: sns
  annotations:
    kubernetes.io/ingress.class: "nginx"    
spec:
  tls:
  - hosts:
    - localhost
    secretName: ingress-cert
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/payments
        pathType: Prefix
        backend:
          service:
            name: payment
            port:
              number: 3000
      - path: /api/subscriptions
        pathType: Prefix
        backend:
          service:
            name: subscription
            port:
              number: 3001
